fix: update layout and styling for header and margins, adjust gap sizes

--- a/home/home.css
+++ b/home/home.css
@@ -1,9 +1,25 @@
 .txt-loop {
     display: flex;
+    margin-bottom: 5rem;
+    overflow: hidden;
+    width: 100vw;
+}
+
+.txt-wrap {
+    display: flex;
     flex-direction: row;
-    gap: 5vw;
-    overflow-x: hidden;
-    margin-bottom: 10vh;
+    gap: 5rem;
+    animation: scroll 30s linear infinite;
+    width: max-content;
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
 }
 
 .txt-loop article {
@@ -20,5 +36,5 @@
 }
 
 .txt-loop article .acidgr {
-    font-size: clamp(1.5rem, 4vw - 0.5rem, 2rem);
+    font-size: clamp(1rem, 4vw - 0.5rem, 1.5rem);
 }
