--- a/site-styles/margins.css
+++ b/site-styles/margins.css
@@ -2,5 +2,5 @@ main {
     margin: 0 clamp(0rem, 10.5% - 4rem, 10.5%);
     display: flex;
     flex-direction: column;
-    gap: 15vh;
+    gap: 5rem;
 }
